<resources>
    <string name="app_name">ChadsInventoryApp</string>
    <string name="product_name_label">Product Name:</string>
    <string name="product_description_label">Product Description:</string>
    <string name="product_price_label">Unit Price:</string>
    <string name="product_quantiry_label">Quantity in Stock:</string>
    <string name="menu_action_save">Save</string>
    <string name="menu_action_delete">Delete</string>
    <string name="confirm_delete_message">Delete this product?</string>
    <string name="confirm_positive_delete">delete</string>
    <string name="confirm_negative_delete">cancel</string>
    <string name="list_quantity_label">QTY:</string>
    <string name="list_price_label">Price:</string>
    <string name="list_sale_button_label">Sale</string>
    <string name="shipment_button">Shipment Received</string>
    <string name="order_label">Order more from the supplier</string>
    <string name="supplier_button">Order</string>
    <string name="supplier_details_label">Supplier Details</string>
    <string name="add_edit_supplier">Supplier:</string>
    <string name="nothing_to_sell">No Inventory to Sell</string>
    <string name="name_required">Name Required</string>
    <string name="price_required">Price Required</string>
    <string name="quantity_required">Quantity Required</string>
    <string name="photo_required">Photograph Required</string>

    <!-- Spinner Options char limit 20 -->
    <string name="no_supplier">No Supplier</string>
    <string name="coffee_hut">Coffee Hut</string>
    <string name="bean_barn">Bean Barn</string>
    <string name="farm_direct">Farm Direct</string>
    <!-- email for each supplier -->
    <string name="coffee_hut_email">contact@coffeehut.com</string>
    <string name="bean_barn_email">orderBeans@beanbarn.org</string>
    <string name="farm_direct_email">directorder@thefarm.com</string>
    <!-- Details for each supplier -->

    <string name="coffee_hut_details">"The Coffee Hut
    Phone: (425) 425-4254
    Email: contact@CoffeeHut.com
    Address: 1204 SW Keen RD
    Texarcana, TX 12345"</string>
    <string name="bean_barn_details">"Bean Barn
    Phone: (555)555-1212
    Email: orderBeans@beanbarn.org
    Address: 25025 SE Ridder Rd
    Kennewick, WA 99336"</string>
    <string name="farm_direct_details">"Farm Direct
        Phone: (123)324-1212
        Email: directorder@thefarm.com
        Address: 123 S dirt RD
        City, State, 00000
        Brazil
    </string>

    <string name="empty_instructions">To get started adding products,
        press the floating action button. From there add a product name, description, price,
    quantity, and select a supplier.</string>
    <string name="add_manually">new product, add quantity manually</string>

</resources>
